# TCP-IP-Multicast

./: README.md
Client/: CMakeLists.txt  main.cpp
Client/Helpers/Inc/: calculation_helper.hpp
Client/Helpers/Src/: CMakeLists.txt  calculation_helper.cpp
Server/: CMakeLists.txt  main.cpp
